# project-asia-restaurant

./: .env.example  .gitignore  README.md  docker-compose.yml
nginx/: nginx.conf
php/: Dockerfile  index.php
python/: Dockerfile  app.py  celerybeat-schedule  pyproject.toml  wsgi.py
python/app/: __init__.py  celery_app.py  config.py  routes.py  seed.py
python/app/extensions/: __init__.py  db.py  migrate.py
python/app/logic/: occupancy_estimator.py
python/app/logic/rpi/: bme680.py  bme680_motion_tests_script.py  bme680_sensor.py  bme680_sensor_test_script.py  motion_camera_capture.py  motion_sensor.py  motion_sensor_infrared.py  motion_sensor_test.py
python/app/logic/storage/: __init__.py  s3.py
python/app/models/: __init__.py  measurements.py  repositories.py  respoitories.py  room_data.py  services.py  video_recording.py
python/app/tasks/: __init__.py  read_task.py  tasks.py
python/app/templates/: base.html  dashboard.html  index.html
python/migrations/versions/: 2416e73489fa_added_persons.py  533c2f96b79e_initial.py  7b3a2c91e405_add_video_recordings.py
python/static/js/: dashboard.js
rpi/: motion_lamp_test.py  motion_sensor_test.py
