[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blinker==1.9.0",
    "bme680==2.0.0",
    "click==8.3.0",
    "colorama==0.4.6",
    "flask==3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.3",
    "pymysql>=1.1.2",
    "sqlalchemy==2.0.*",
    "python-dotenv==1.2.1",
    "smbus2==0.5.0",
    "werkzeug==3.1.3",
    "flask-migrate>=4.1.0",
    "celery>=5.3",
    "redis>=5.0",
]
